update index.html and style.css

--- a/index.html
+++ b/index.html
@@ -1,13 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <title>Document</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://kit.fontawesome.com/0261300f54.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <title>Pricing table</title>
+  </head>
+
+  <body>
+    <header>
+      <h1>Conheça nossos planos</h1>
+      <p>
+        Conheça nossas soluções e escolha o plano ideal para o seu próximo
+        projeto.
+      </p>
+    </header>
+    <main>
+      <div class="card">
+        <h3>Free</h3>
+        <h2><strong>R$ 0,00</strong>/mês</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore repellendus illum eligendi dolorem sed tenetur.
+        </p>
+        <ul>
+          <li><i class="fa-solid fa-check"></i>Lorem ipsum dolor sit amet</li>
+          <li><i class="fa-solid fa-check"></i>Lorem ipsum dolor sit amet</li>
+        </ul>
+        <a href="#" class="button">ASSINAR</a>
+      </div>
+      <div class="card principal">
+        <div class="top">
+          <h3>Básico</h3>
+          <h4>Popular</h4>
+        </div>
+        <h2><strong>R$ 29,00</strong>/mês</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore repellendus illum eligendi dolorem sed tenetur.
+        </p>
+        <ul>
+          <li><i class="fa-solid fa-check"></i>Lorem ipsum dolor sit amet</li>
+          <li><i class="fa-solid fa-check"></i>Lorem ipsum dolor sit amet</li>
+          <li><i class="fa-solid fa-check"></i>Lorem ipsum dolor sit amet</li>
+        </ul>
+        <a href="#" class="button">ASSINAR</a>
+      </div>
+      <div class="card">
+        <h3>Profissional</h3>
+        <h2><strong>R$ 59,00</strong>/mês</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore repellendus illum eligendi dolorem sed tenetur.
+        </p>
+        <ul>
+          <li><i class="fa-solid fa-check"></i>Lorem ipsum dolor sit amet</li>
+          <li><i class="fa-solid fa-check"></i>Lorem ipsum dolor sit amet</li>
+          <li><i class="fa-solid fa-check"></i>Lorem ipsum dolor sit amet</li>
+          <li><i class="fa-solid fa-check"></i>Lorem ipsum dolor sit amet</li>
+        </ul>
+        <a href="#" class="button">ASSINAR</a>
+      </div>
+    </main>
+  </body>
 </html>
